--- a/Crypto_Clustering.ipynb
+++ b/Crypto_Clustering.ipynb
@@ -2939,7 +2939,7 @@
     "\n",
     "  * **Question:** After visually analyzing the cluster analysis results, what is the impact of using fewer features to cluster the data using K-Means?\n",
     "\n",
-    "  * **Answer:** It seems to remove redundant or correlated data while retaining most of the variance."
+    "  * **Answer:** PCA led to more compact clusters by eliminating less important features, reducing the optimal cluster count. This suggests that the original dataset had redundant information."
    ]
   },
   {
